[project]
name = "codeflow-viewer"
version = "0.1.0"
description = "Python, AST, and Streamlit analyzer for CodeFlow Viewer."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "MASA" }
]
dependencies = []

[project.scripts]
codeflow = "codeflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
