[project]
name = "codeflow-viewer"
version = "0.1.0"
description = "Python project analysis, AI planning, saved-artifact viewing, and status reporting for CodeFlow Viewer."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "MASA" }
]
dependencies = []

[project.scripts]
codeflow = "codeflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
