[metadata]
name = codeflow-viewer
version = 0.1.0
description = Python project analysis and AI planning for CodeFlow Viewer.
long_description = file: README.md
long_description_content_type = text/markdown
author = MASA

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    codeflow = codeflow.cli:main
